<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MATH ASSIS</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Addition</string>
    <string name="button_send1">Subtraction</string>
    <string name="button_send2">Multiplication</string>
    <string name="button_send3">Division</string>
    <string name="action_settings">Settings</string>
    <string name="button_send4">ADMIN LOGIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_2">Activity2</string>
    <string name="title_activity_3">Activity3</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_practice1">Practice1</string>
    <string name="title_activity_4">Activity4</string>
    <string name="title_activity_5">Activity5</string>
    <string name="title_activity_test1">Test1</string>
    <string name="title_activity_practice2">Practice2</string>
    <string name="title_activity_test2">Test2</string>
    <string name="title_activity_practice3">Practice3</string>
    <string name="title_activity_practice4">Practice4</string>
    <string name="title_activity_test3">Test3</string>
    <string name="title_activity_test4">Test4</string>
    <string name="title_activity_edit_animal">EditAnimal</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_dbcontroller">DBController</string>
    <string name="title_activity_edit_addition">EditAddition</string>
    <string name="title_activity_new_addition">NewAddition</string>
    <string name="title_activity_view_addition_entry">View_addition_entry</string>
    <string name="title_activity_trial">trial</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_new_sub">NewSub</string>
    <string name="title_activity_new_mul">NewMul</string>
    <string name="title_activity_new_div">NewDiv</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_easy">Easy</string>
    <string name="title_activity_medium">Medium</string>
    <string name="title_activity_hard">Hard</string>
</resources>