<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/sd"
    android:focusable="false"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Learn Basic Mathematics"
        android:id="@+id/textView6"
        android:textSize="40sp"
        android:textColor="#FFFFFF"


        android:gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:backgroundTintMode="src_over"
        android:shadowColor="@color/accent_material_light"
        android:typeface="serif"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingBottom="30dp"
        android:paddingTop="60dp"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/textView6"
        android:layout_centerHorizontal="true">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:id="@+id/button"
        android:layout_weight="0.13"

        android:onClick="sendMessage"

        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send1"
        android:id="@+id/button2"
        android:layout_weight="0.13"

        android:onClick="sendMessage1"

        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send2"
        android:id="@+id/button3"

        android:layout_weight="0.13"
        android:onClick="sendMessage2"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send3"
            android:id="@+id/button2"

            android:layout_weight="0.13"
            android:onClick="sendMessage3"

            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="20dp" />
    </LinearLayout>


        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send4"
            android:id="@+id/button5"

            android:layout_weight="0.13"
            android:singleLine="false"

            android:onClick="sendMessage4"
            android:layout_marginBottom="63dp"
            android:textSize="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Are you Admin?"
        android:id="@+id/textView6"
        android:textColor="#FFFFFF"

            android:layout_above="@+id/button5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take a Quiz!"
        android:id="@+id/button7"
        android:onClick="quiz"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>